# cmake-examples

./: .gitignore  .travis.yml  CONTRIBUTING.md  Jenkinsfile  LICENSE  README.adoc  README.md  book.toml  github-actions.md  glob.js  index.html  index.md  package-lock.json  package.json  params.json  test.sh
.devcontainer/: devcontainer.json  updateContentCommand.sh
.github/workflows/: build_sonar.yml  deploy-pages.yml  gh-push.yml  npm-test.yml  test-examples.yml
.old/B-hello-headers/: README.adoc
.old/B-vendoring-code/: README.adoc
.old/C-static-library/: CMakeLists.txt
.old/C-static-library/src/: Hello.cpp
.old/D-shared-library/: CMakeLists.txt
.old/D-shared-library/src/: Hello.cpp
.old/E-installing/: README.adoc
.old/F-build-type/: CMakeLists.txt  main.cpp
.old/G-compile-flags/: main.cpp
.old/H-third-party-library/: CMakeLists.txt
.old/I-compiling-with-clang/: main.cpp  pre_test.sh  run_test.sh
.old/J-building-with-ninja/: run_test.sh
.old/K-imported-targets/: README.adoc  run_test.sh
.old/L-cpp-standard/: README.adoc
.old/L-cpp-standard/ii-cxx-standard/: CMakeLists.txt  README.adoc  main.cpp
.old/boost/: README.adoc  post_test.sh  unit_tests.cpp
.old/catch2-vendored/: README.adoc  Reverse.cpp
.old/clang-analyzer/: CMakeLists.txt
.old/clang-format/: .clang-format
.old/configure-files/: README.adoc  path.h.in  ver.h.in
.old/cppcheck/: README.adoc  run_test.sh
.old/cppcheck-compile-commands/: README.adoc  run_test.sh
.old/cppcheck/subproject1/: CMakeLists.txt  main1.cpp
.old/deb/: cmake-examples.conf
.old/dockerfiles/: setup.sh  ubuntu16.04-cmake-3.10.3  ubuntu16.04-default-cmake-3.5.1
.old/google-test-download/: README.adoc  unit_tests.cpp
.vitepress/: config.ts
01-basic/: README.adoc  README.md
01-basic/B-hello-headers/: CMakeLists.txt  README.adoc  README.md
01-basic/B-hello-headers/src/: Hello.cpp
01-basic/C-static-library/: CMakeLists.txt  README.adoc
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt  README.adoc
01-basic/D-shared-library/inc/: Hello.h
01-basic/D-shared-library/src/: Hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt  README.adoc
01-basic/G-compile-flags/: CMakeLists.txt  README.adoc
01-basic/H-third-party-library/: CMakeLists.txt  README.adoc
01-basic/K-imported-targets/: CMakeLists.txt  README.adoc
01-basic/L-cpp-standard/i-common-method/: CMakeLists.txt  README.adoc
01-basic/L-cpp-standard/iii-compile-features/: CMakeLists.txt  README.adoc
02-sub-projects/: README.adoc  README.md
02-sub-projects/A-basic/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/include/sublib1/: sublib1.h
02-sub-projects/A-basic/sublibrary1/src/: sublib1.cpp
03-code-generation/: README.adoc
03-code-generation/configure-files/: CMakeLists.txt  README.adoc  main.cpp
04-static-analysis/: README.adoc  README.md
04-static-analysis/clang-format/: .clang-format  CMakeLists.txt  README.adoc  run_test.sh
04-static-analysis/clang-format/cmake/modules/: FindClangFormat.cmake  clang-format.cmake
04-static-analysis/clang-format/cmake/scripts/: clang-format-check-changed.py
04-static-analysis/cppcheck/: CMakeLists.txt  README.adoc  README.md
04-static-analysis/cppcheck-compile-commands/: CMakeLists.txt  README.adoc
04-static-analysis/cppcheck-compile-commands/cmake/modules/: FindCppCheck.cmake
04-static-analysis/cppcheck-compile-commands/subproject2/: CMakeLists.txt
04-static-analysis/cppcheck/cmake/: analysis.cmake
04-static-analysis/cppcheck/cmake/modules/: FindCppCheck.cmake
04-static-analysis/cppcheck/subproject2/: CMakeLists.txt  main2.cpp
05-unit-testing/: README.adoc
05-unit-testing/boost/: CMakeLists.txt  README.adoc  Reverse.h
05-unit-testing/catch-vendored/: CMakeLists.txt  Palindrome.h  README.adoc  unit_tests.cpp
05-unit-testing/catch2-vendored/: CMakeLists.txt  Palindrome.cpp  main.cpp  unit_tests.cpp
05-unit-testing/google-test-download/: CMakeLists.txt  README.adoc  post_test.sh  run_test.sh
06-installer/: README.adoc
06-installer/deb/: CMakeLists.txt  README.adoc  post_test.sh
07-package-management/: README.adoc
add-include-folder/: CMakeLists.txt  index.md
build-executable/: CMakeLists.txt  index.md
build-library/: CMakeLists.txt  index.md  my-lib.c
build-multiple-targets/: CMakeLists.txt  goodbye-world.cpp  greet.c  index.md
clang-format/: CMakeLists.txt  index.md  main.c
cmakepresets-json/: CMakeLists.txt  CMakePresets.json  index.md
cpr-fetchcontent/: CMakeLists.txt  index.md  main.cpp
dockerfiles/: README.adoc  setup.sh  ubuntu14.04-cmake-3.4.3  ubuntu14.04-default-2.8.12.2  ubuntu16.04-cmake-3.10.3  ubuntu16.04-default-cmake-3.5.1
executable/: .replit  index.md  main.c
fmt-cpm/: CMakeLists.txt  index.md  main.cpp
fmt-cpm/cmake/: CPM.cmake
ftxui-vcpkg/: CMakeLists.txt  CMakePresets.json  index.md  main.cpp
googletest/: CMakeLists.txt  greet.cpp  greet_test.cpp  index.md
gtest-conan/: CMakeLists.txt  conanfile.txt  index.md
hello-world/: .replit  CMakeLists.txt  index.md  main.c  replit.nix
if-else/: .replit  CMakeLists.txt  index.md  main.c  main_linux.c  main_windows.c
include/: CMakeLists.txt  index.md
include-folder/: CMakeLists.txt
message/: CMakeLists.txt  index.md  replit.nix
out-of-source/: index.md
print/: .replit  CMakeLists.txt  index.md
print-message/: CMakeLists.txt  index.md  main.c
public/: LICENSE  replit-onBoot.sh
set-cpp-standard/: CMakeLists.txt  index.md  main.cpp
set-standard/: index.md
shared/: CMakeLists.txt  index.md
src/: README.md  SUMMARY.md  index.md
static/: .replit  CMakeLists.txt  index.md  mylib.c
theme/: catppuccin-admonish.css  catppuccin.css  index.hbs
tools/: clang-format-all.sh  test-examples.sh
two-executables/: CMakeLists.txt  a_main.c  b_main.cpp  index.md
use-library-cpm/: CMakeLists.txt  index.md  main.cpp
use-library-fetchcontent/: CMakeLists.txt  index.md
use-library-vcpkg/: CMakeLists.txt  index.md
(+89 files in other folders)
